@@ -19,7 +19,6 @@ import de.tum.in.www1.artemis.repository.iris.IrisSessionRepository;
 import de.tum.in.www1.artemis.security.Role;
 import de.tum.in.www1.artemis.service.AuthorizationCheckService;
 import de.tum.in.www1.artemis.service.connectors.iris.IrisConnectorService;
-import de.tum.in.www1.artemis.service.iris.IrisMessageService;
 import de.tum.in.www1.artemis.service.iris.settings.IrisSettingsService;
 import de.tum.in.www1.artemis.web.rest.errors.InternalServerErrorException;
 
@@ -34,8 +33,6 @@ public class IrisHestiaSessionService implements IrisButtonBasedFeatureInterface
 
     private final IrisConnectorService irisConnectorService;
 
-    private final IrisMessageService irisMessageService;
-
     private final IrisSettingsService irisSettingsService;
 
     private final AuthorizationCheckService authCheckService;
@@ -44,10 +41,9 @@ public class IrisHestiaSessionService implements IrisButtonBasedFeatureInterface
 
     private final IrisHestiaSessionRepository irisHestiaSessionRepository;
 
-    public IrisHestiaSessionService(IrisConnectorService irisConnectorService, IrisMessageService irisMessageService, IrisSettingsService irisSettingsService,
-            AuthorizationCheckService authCheckService, IrisSessionRepository irisSessionRepository, IrisHestiaSessionRepository irisHestiaSessionRepository) {
+    public IrisHestiaSessionService(IrisConnectorService irisConnectorService, IrisSettingsService irisSettingsService, AuthorizationCheckService authCheckService,
+            IrisSessionRepository irisSessionRepository, IrisHestiaSessionRepository irisHestiaSessionRepository) {
         this.irisConnectorService = irisConnectorService;
-        this.irisMessageService = irisMessageService;
         this.irisSettingsService = irisSettingsService;
         this.authCheckService = authCheckService;
         this.irisSessionRepository = irisSessionRepository;
@@ -64,9 +60,9 @@ public class IrisHestiaSessionService implements IrisButtonBasedFeatureInterface
     public IrisHestiaSession getOrCreateSession(CodeHint codeHint) {
         var existingSessions = irisHestiaSessionRepository.findByCodeHintIdOrderByCreationDateDesc(codeHint.getId());
         // Return the newest session if there is one and it is not older than 1 hour
-        if (!existingSessions.isEmpty() && existingSessions.get(0).getCreationDate().plusHours(1).isAfter(ZonedDateTime.now())) {
-            checkHasAccessTo(null, existingSessions.get(0));
-            return existingSessions.get(0);
+        if (!existingSessions.isEmpty() && existingSessions.getFirst().getCreationDate().plusHours(1).isAfter(ZonedDateTime.now())) {
+            checkHasAccessTo(null, existingSessions.getFirst());
+            return existingSessions.getFirst();
         }
 
         // Otherwise create a new session
@@ -103,10 +99,11 @@ public class IrisHestiaSessionService implements IrisButtonBasedFeatureInterface
             var response = irisConnectorService.sendRequestV2(settings.getTemplate().getContent(), settings.getPreferredModel(), parameters).get();
             var shortDescription = response.content().get("shortDescription").asText();
             var longDescription = response.content().get("longDescription").asText();
-            var llmMessage = new IrisMessage();
+            var llmMessage = irisSession.newMessage();
             llmMessage.setSender(IrisMessageSender.LLM);
             llmMessage.addContent(new IrisJsonMessageContent(response.content()));
-            irisMessageService.saveMessage(llmMessage, irisSession, IrisMessageSender.LLM);
+
+            irisSessionRepository.save(irisSession);
 
             codeHint.setDescription(shortDescription);
             codeHint.setContent(longDescription);
